--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,7 +53,7 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #212121;
+$body-color                 : #fff;
 $background-color           : #212121;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
