--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,11 +53,11 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
+$body-color                 : #212121;
 $background-color           : #212121;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #eaeaea;
+$text-color                 : #d1d1d1;
 $border-color               : mix(#fff, $background-color, 20%);
 
 $primary-color              : #4f8b72;
