--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,13 +54,13 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #212121;
-$background-color           : #2b2b2b;
+$background-color           : #212121;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #d1d1d1;
 $border-color               : mix(#fff, $background-color, 20%);
 
-$primary-color              : #4f8b72;
+$primary-color              : #557c00;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
