--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,7 +60,7 @@ $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #d1d1d1;
 $border-color               : mix(#fff, $background-color, 20%);
 
-$primary-color              : #865470;
+$primary-color              : #4f778b;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
