--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : #4f778b;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #4f8b72;
+$info-color                 : #212121;
 
 /* brands */
 $behance-color              : #1769FF;
