--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,11 +60,11 @@ $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #d1d1d1;
 $border-color               : mix(#fff, $background-color, 20%);
 
-$primary-color              : #4f778b;
+$primary-color              : #d1d1d1;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #212121;
+$info-color                 : #4F948B;
 
 /* brands */
 $behance-color              : #1769FF;
