playing with colors

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #212121;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #d1d1d1;
-$border-color               : mix(#fff, $background-color, 20%);
+$border-color               : #4F948B;
 
 $primary-color              : #d1d1d1;
 $success-color              : #62c462;
