--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,7 +4,7 @@
 
 .masthead {
   position: relative;
-  background: #fff;
+  background: #212121;
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
