--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,8 +57,8 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #d1d1d1;
-$border-color               : #4F948B;
+$text-color                 : #212121;
+$border-color               : #212121;
 
 $primary-color              : #d1d1d1;
 $success-color              : #62c462;
