--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,6 +7,7 @@
    ========================================================================== */
 
 .sidebar {
+  background-color: #fff;
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
 
