--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,9 +3,9 @@
    ========================================================================== */
 
 .masthead {
-  background-color: #fff;
+  background-color: #212121;
   position: relative;
-  border-bottom: 1px solid $border-color;
+  border-bottom: 2px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
