--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,7 +7,7 @@
    ========================================================================== */
 
 .sidebar {
-  background-color: #fff;
+  background-color: #212121;
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
 
