--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .masthead {
-  background-color: #212121;
+  background-color: $masthead-color;
   position: relative;
   border-bottom: 2px solid $border-color;
   -webkit-animation: intro 0.3s both;
