--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -59,6 +59,7 @@ $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #d1d1d1;
 $border-color               : #d1d1d1;
+$masthead-color             : #212121;
 
 $primary-color              : #d1d1d1;
 $success-color              : #62c462;
