--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,7 +57,7 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #d1d1d1;
+$text-color                 : #ababab;
 $border-color               : #d1d1d1;
 $masthead-color             : #212121;
 
