--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,7 +61,7 @@ $text-color                 : #929292;
 $border-color               : #4F948B;
 $masthead-color             : #212121;
 
-$primary-color              : #d1d1d1;
+$primary-color              : #4F948B;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
