--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,15 +57,15 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #929292;
+$text-color                 : #212121;
 $border-color               : #4F948B;
 $masthead-color             : #212121;
 
-$primary-color              : #4F948B;
+$primary-color              : #d1d1d1;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #4F948B;
+$info-color                 : #4f8b72;
 
 /* brands */
 $behance-color              : #1769FF;
