--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #fff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #212121;
-$border-color               : #4F948B;
+$border-color               : #4f8b72;
 $masthead-color             : #212121;
 
 $primary-color              : #d1d1d1;
