--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -16,6 +16,11 @@
   }
 }
 
+.image-caption {
+  text-align: center;
+  font-size: .8rem;
+  color: light-grey;
+  
 .page {
   @include breakpoint($large) {
     @include span(10 of 12 last);
